--- a/WindowsUIWalla/ManageWalla/ManageWalla.csproj
+++ b/WindowsUIWalla/ManageWalla/ManageWalla.csproj
@@ -128,6 +128,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ProjectDataType\UploadImageStateList.cs" />
+    <Compile Include="ProjectDataType\UploadImageState.cs" />
     <Compile Include="ProjectDataType\MainCopyCache.cs" />
     <Compile Include="CacheHelper.cs" />
     <Compile Include="ProjectDataType\GalleryCategoryModel.cs" />
