--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -5,9 +5,6 @@
             <section name="ManageWalla.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
         <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="ManageWalla.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
     </configSections>
   
   
@@ -47,6 +44,12 @@
             <setting name="ThumbCacheFileName" serializeAs="String">
                 <value>Walla-LocalThumbCache.db</value>
             </setting>
+            <setting name="MainCopyCacheFileName" serializeAs="String">
+                <value>Walla-LocalMainCopyCache.db</value>
+            </setting>
+            <setting name="UploadImageStateFileName" serializeAs="String">
+                <value>Walla-LocalUploadImageStateCache.db</value>
+            </setting>
         </ManageWalla.Properties.Settings>
     </applicationSettings>
 
@@ -76,11 +79,4 @@
     </root>
   </log4net>
 
-  <userSettings>
-    <ManageWalla.Properties.Settings>
-      <setting name="MainCopyCacheFileName" serializeAs="String">
-        <value>Walla-LocalMainCopyCache.db</value>
-      </setting>
-    </ManageWalla.Properties.Settings>
-  </userSettings>
 </configuration>
