--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -39,7 +39,7 @@
                 <value>Walla-LocalGlobalState.db</value>
             </setting>
             <setting name="WallaAppKey" serializeAs="String">
-                <value>12345678901234567890</value>
+                <value>1234567890</value>
             </setting>
             <setting name="ThumbCacheFileName" serializeAs="String">
                 <value>Walla-LocalThumbCache.db</value>
@@ -49,6 +49,12 @@
             </setting>
             <setting name="UploadImageStateFileName" serializeAs="String">
                 <value>Walla-LocalUploadImageStateCache.db</value>
+            </setting>
+            <setting name="OS" serializeAs="String">
+                <value>Windows</value>
+            </setting>
+            <setting name="TempUserName" serializeAs="String">
+                <value>JohanTheThird</value>
             </setting>
         </ManageWalla.Properties.Settings>
     </applicationSettings>
