--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -5,6 +5,9 @@
             <section name="ManageWalla.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
         <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ManageWalla.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
   
   
@@ -53,9 +56,6 @@
             <setting name="OS" serializeAs="String">
                 <value>Windows</value>
             </setting>
-            <setting name="TempUserName" serializeAs="String">
-                <value>JohanTheThird</value>
-            </setting>
         </ManageWalla.Properties.Settings>
     </applicationSettings>
 
@@ -85,4 +85,11 @@
     </root>
   </log4net>
 
+  <userSettings>
+    <ManageWalla.Properties.Settings>
+      <setting name="LastUser" serializeAs="String">
+        <value>NewBoy</value>
+      </setting>
+    </ManageWalla.Properties.Settings>
+  </userSettings>
 </configuration>
