From me proper PC. with fixed bits.

--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -79,7 +79,7 @@
   <userSettings>
     <ManageWalla.Properties.Settings>
       <setting name="LastUser" serializeAs="String">
-        <value>NewBoy</value>
+        <value />
       </setting>
     </ManageWalla.Properties.Settings>
   </userSettings>
