--- a/WindowsUIWalla/ManageWalla/Properties/Settings.settings
+++ b/WindowsUIWalla/ManageWalla/Properties/Settings.settings
@@ -36,7 +36,7 @@
       <Value Profile="(Default)">Windows</Value>
     </Setting>
     <Setting Name="LastUser" Type="System.String" Scope="User">
-      <Value Profile="(Default)">NewBoy</Value>
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
