--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -27,7 +27,7 @@
                 <value>/WallaHub/v1/web/</value>
             </setting>
             <setting name="WebServerTest" serializeAs="String">
-                <value>www.google.com</value>
+                <value>localhost</value>
             </setting>
             <setting name="GlobalStateCacheFileName" serializeAs="String">
                 <value>Walla-LocalGlobalState.db</value>
