Got new app start routine
And upload status list re-factored.

--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -14,9 +14,6 @@
   
     <applicationSettings>
         <ManageWalla.Properties.Settings>
-            <setting name="WallaWSHostname" serializeAs="String">
-                <value>localhost</value>
-            </setting>
             <setting name="WallaWSPort" serializeAs="String">
                 <value>8081</value>
             </setting>
@@ -25,9 +22,6 @@
             </setting>
             <setting name="WallaWebPath" serializeAs="String">
                 <value>/WallaHub/v1/web/</value>
-            </setting>
-            <setting name="WebServerTest" serializeAs="String">
-                <value>localhost</value>
             </setting>
             <setting name="GlobalStateCacheFileName" serializeAs="String">
                 <value>Walla-LocalGlobalState.db</value>
@@ -46,6 +40,12 @@
             </setting>
             <setting name="OS" serializeAs="String">
                 <value>Windows</value>
+            </setting>
+            <setting name="WebServerTest" serializeAs="String">
+                <value>www.google.com</value>
+            </setting>
+            <setting name="WallaWSHostname" serializeAs="String">
+                <value>localhost</value>
             </setting>
         </ManageWalla.Properties.Settings>
     </applicationSettings>
