--- a/WindowsUIWalla/ManageWalla/ManageWalla.csproj
+++ b/WindowsUIWalla/ManageWalla/ManageWalla.csproj
@@ -151,8 +151,8 @@
     <Compile Include="WallaDataType\CategoryList.cs" />
     <Compile Include="WallaDataType\Gallery.cs" />
     <Compile Include="WallaDataType\GalleryList.cs" />
+    <Compile Include="WallaDataType\ImageIdList.cs" />
     <Compile Include="WallaDataType\ImageList.cs" />
-    <Compile Include="WallaDataType\ImageMoveList.cs" />
     <Compile Include="WallaDataType\Tag.cs" />
     <Compile Include="MainController.cs" />
     <Compile Include="ProjectDataType\UploadUIState.cs" />
@@ -217,12 +217,14 @@
     <None Include="WallaSchema\CategoryList.xsd" />
     <None Include="WallaSchema\Gallery.xsd" />
     <None Include="WallaSchema\GalleryList.xsd" />
+    <None Include="WallaSchema\ImageIdList.xsd" />
     <None Include="WallaSchema\ImageList.xsd" />
     <None Include="WallaSchema\ImageMeta.xsd" />
-    <None Include="WallaSchema\ImageMoveList.xsd" />
+    <None Include="WallaSchema\Machine.xsd" />
     <None Include="WallaSchema\TagList.xsd" />
     <None Include="WallaSchema\Tag.xsd" />
     <None Include="WallaSchema\UploadStatusList.xsd" />
+    <None Include="WallaSchema\UserApp.xsd" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
