Upload status request.  New icons.

--- a/WindowsUIWalla/ManageWalla/ManageWalla.csproj
+++ b/WindowsUIWalla/ManageWalla/ManageWalla.csproj
@@ -466,6 +466,10 @@
   <ItemGroup>
     <Resource Include="resources\icons\notSelected.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="resources\icons\application_large.png" />
+    <Resource Include="resources\icons\application_small.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
