--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -45,7 +45,7 @@
                 <value>www.google.com</value>
             </setting>
             <setting name="WallaWSHostname" serializeAs="String">
-                <value>localhost</value>
+                <value>192.168.1.229</value>
             </setting>
         </ManageWalla.Properties.Settings>
     </applicationSettings>
@@ -79,6 +79,9 @@
   <userSettings>
     <ManageWalla.Properties.Settings>
       <setting name="LastUser" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Setting" serializeAs="String">
         <value />
       </setting>
     </ManageWalla.Properties.Settings>
