--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -10,8 +10,6 @@
         </sectionGroup>
     </configSections>
   
-  
-  
     <applicationSettings>
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSPort" serializeAs="String">
@@ -45,7 +43,7 @@
                 <value>www.google.com</value>
             </setting>
             <setting name="WallaWSHostname" serializeAs="String">
-                <value>192.168.1.229</value>
+                <value>localhost</value>
             </setting>
         </ManageWalla.Properties.Settings>
     </applicationSettings>
@@ -57,9 +55,8 @@
       </layout>
     </appender>
 
-
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="walla-log-file.txt" />
+      <file value="aaa-walla-log-file.txt" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="10" />
@@ -68,10 +65,9 @@
       <layout type="log4net.Layout.SimpleLayout" />
     </appender>
 
-
     <root>
-      <level value="ALL" />
-      <appender-ref ref="ConsoleAppender" />
+      <level value="DEBUG" />
+      <!--<appender-ref ref="ConsoleAppender" />-->
       <appender-ref ref="RollingFileAppender" />
     </root>
   </log4net>
