--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -49,11 +49,36 @@
     </applicationSettings>
 
   <log4net>
-    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
+
+    <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+      <target value="Console.Error" />
+      <mapping>
+        <level value="FATAL" />
+        <foreColor value="Red" />
+        <backColor value="White" />
+      </mapping>
+      <mapping>
+        <level value="ERROR" />
+        <foreColor value="Red, HighIntensity" />
+      </mapping>
+      <mapping>
+        <level value="WARN" />
+        <foreColor value="Yellow" />
+      </mapping>
+      <mapping>
+        <level value="INFO" />
+        <foreColor value="Cyan" />
+      </mapping>
+      <mapping>
+        <level value="DEBUG" />
+        <foreColor value="Green" />
+      </mapping>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %message %exception %newline" />
       </layout>
     </appender>
+
+
 
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="aaa-walla-log-file.txt" />
@@ -62,12 +87,14 @@
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="5MB" />
       <staticLogFileName value="true" />
-      <layout type="log4net.Layout.SimpleLayout" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %message %exception %newline" />
+      </layout>
     </appender>
 
     <root>
       <level value="DEBUG" />
-      <!--<appender-ref ref="ConsoleAppender" />-->
+      <appender-ref ref="ColoredConsoleAppender" />
       <appender-ref ref="RollingFileAppender" />
     </root>
   </log4net>
