--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -43,7 +43,7 @@
                 <value>www.google.com</value>
             </setting>
             <setting name="WallaWSHostname" serializeAs="String">
-                <value>localhost</value>
+                <value>192.168.1.229</value>
             </setting>
         </ManageWalla.Properties.Settings>
     </applicationSettings>
