--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -16,10 +16,10 @@
                 <value>8081</value>
             </setting>
             <setting name="WallaWSPath" serializeAs="String">
-                <value>/WallaHub/v1/ws/</value>
+                <value>/wallahub/v1/ws/</value>
             </setting>
             <setting name="WallaWebPath" serializeAs="String">
-                <value>/WallaHub/v1/web/</value>
+                <value>/wallahub/v1/web/</value>
             </setting>
             <setting name="GlobalStateCacheFileName" serializeAs="String">
                 <value>Walla-LocalGlobalState.db</value>
@@ -43,7 +43,7 @@
                 <value>www.google.com</value>
             </setting>
             <setting name="WallaWSHostname" serializeAs="String">
-                <value>192.168.1.129</value>
+                <value>localhost</value>
             </setting>
         </ManageWalla.Properties.Settings>
     </applicationSettings>
