--- a/WindowsUIWalla/ManageWalla/Properties/Settings.settings
+++ b/WindowsUIWalla/ManageWalla/Properties/Settings.settings
@@ -6,10 +6,10 @@
       <Value Profile="(Default)">8081</Value>
     </Setting>
     <Setting Name="WallaWSPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">/WallaHub/v1/ws/</Value>
+      <Value Profile="(Default)">/wallahub/v1/ws/</Value>
     </Setting>
     <Setting Name="WallaWebPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">/WallaHub/v1/web/</Value>
+      <Value Profile="(Default)">/wallahub/v1/web/</Value>
     </Setting>
     <Setting Name="GlobalStateCacheFileName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Walla-LocalGlobalState.db</Value>
@@ -36,7 +36,7 @@
       <Value Profile="(Default)">www.google.com</Value>
     </Setting>
     <Setting Name="WallaWSHostname" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">192.168.1.129</Value>
+      <Value Profile="(Default)">localhost</Value>
     </Setting>
     <Setting Name="Setting" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
