--- a/WindowsUIWalla/ManageWalla/app.config
+++ b/WindowsUIWalla/ManageWalla/app.config
@@ -13,7 +13,7 @@
     <applicationSettings>
         <ManageWalla.Properties.Settings>
             <setting name="WallaWSPort" serializeAs="String">
-                <value>8081</value>
+                <value>8082</value>
             </setting>
             <setting name="WallaWSPath" serializeAs="String">
                 <value>/wallahub/v1/ws/</value>
@@ -40,11 +40,12 @@
                 <value>Windows</value>
             </setting>
             <setting name="WebServerTest" serializeAs="String">
-                <value>www.google.com</value>
+                <value>www.ask.com</value>
             </setting>
             <setting name="WallaWSHostname" serializeAs="String">
                 <value>localhost</value>
             </setting>
+          <!-- 85.13.193.30 -->
         </ManageWalla.Properties.Settings>
     </applicationSettings>
 
